RESOLVED FIXED224971
Asserting that function or variable is accessed in a certain thread should be simpler and more robust
https://bugs.webkit.org/show_bug.cgi?id=224971
Summary Asserting that function or variable is accessed in a certain thread should be...
Kimmo Kinnunen
Reported 2021-04-23 01:57:57 PDT
Asserting that function or variable is accessed in a certain thread should be simpler and more robust Currently thread assertions are of form: ASSERT(isMainThread()); ASSERT(!isMainThread()); These are sometimes applied and sometimes not. Especially the latter is quite vague. This creates small consistency problems. For example, WeakPtr has the property that it must be dereferenced in the thread that owns the WeakPtrFactory. However, the assertion is only done for main thread. It would be beneficial to have following additions: 1) Possibility to assert arbitrary thread 2) Possibility to enforce the thread access compile-time through thread safety analysis.
Attachments
Patch (17.78 KB, patch)
2021-04-23 02:44 PDT, Kimmo Kinnunen
no flags
Patch (14.26 KB, patch)
2021-04-23 02:49 PDT, Kimmo Kinnunen
no flags
Patch (95.70 KB, patch)
2021-04-27 06:07 PDT, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2021-04-23 02:44:39 PDT
Kimmo Kinnunen
Comment 2 2021-04-23 02:49:50 PDT
Darin Adler
Comment 3 2021-04-25 13:16:47 PDT
Comment on attachment 426897 [details] Patch Would be nice to use this in at least one place in the non-test code in this initial patch, but clean to do the patch as-is, too.
Kimmo Kinnunen
Comment 4 2021-04-27 06:07:28 PDT
EWS
Comment 5 2021-04-28 06:30:24 PDT
Committed r276706 (237115@main): <https://commits.webkit.org/237115@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 427140 [details].
Radar WebKit Bug Importer
Comment 6 2021-04-28 06:31:34 PDT
Note You need to log in before you can comment on or make changes to this bug.