Source/WebKit/GPUProcess/graphics/RemoteGraphicsContextGL.h
@@ -36,6 +36,7 @@
 #include <WebCore/ExtensionsGL.h>
 #include <WebCore/GraphicsContextGLOpenGL.h>
 #include <WebCore/NotImplemented.h>
+#include <wtf/ThreadAssertions.h>
 #include <wtf/WeakPtr.h>
 
 #if PLATFORM(COCOA)
@@ -108,10 +109,11 @@ protected:
 
     WeakPtr<GPUConnectionToWebProcess> m_gpuConnectionToWebProcess;
     RefPtr<IPC::StreamServerConnection<RemoteGraphicsContextGL>> m_streamConnection;
-    RefPtr<WebCore::GraphicsContextGLOpenGL> m_context;
+    RefPtr<WebCore::GraphicsContextGLOpenGL> m_context WTF_GUARDED_BY_LOCK(m_streamThread);
     GraphicsContextGLIdentifier m_graphicsContextGLIdentifier;
     Ref<RemoteRenderingBackend> m_renderingBackend;
     ScopedWebGLRenderingResourcesRequest m_renderingResourcesRequest;
+    NO_UNIQUE_ADDRESS ThreadAssertion m_streamThread;
 };
 
 IPC::StreamConnectionWorkQueue& remoteGraphicsContextGLStreamWorkQueue();
